--- a/newHomepage/banner.html
+++ b/newHomepage/banner.html
@@ -79,7 +79,7 @@
     }
     
     .bg img {
-        opacity: .8;
+        opacity: .93;
     }
 
     .hero-text {
@@ -115,7 +115,7 @@
     }
 
     @keyframes fade {
-        from {opacity: .8}
+        from {opacity: 1}
         to {opacity: 1}
     }
 
@@ -272,7 +272,7 @@
         <!-- Beginning of one picture in the slideshow; must copy and paste whole section to make new page in slideshow -->
         <div class="mySlides fade">
             <div class="bg">
-                <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/duck1.png" style="width:100%">
+                <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/quack.png" style="width:100%">
                 <div class="hero-text">
                     <b>Welcome to BookIt!</b>
                     <div class="spacer"></div>
@@ -303,7 +303,7 @@
         <!-- Beginning of one picture in the slideshow -->
         <div class="mySlides fade">
             <div class="bg">
-                <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/duck2.png" style="width:100%">
+                <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/quack.png" style="width:100%">
                 <div class="hero-text">
                     <b>Welcome to BookIt!</b>
                     <div class="spacer"></div>
@@ -334,7 +334,7 @@
         <!-- Beginning of one picture in the slideshow -->
         <div class="mySlides fade">
             <div class="bg">
-                <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/duck3.png" style="width:100%">
+                <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/blueQuack.png" style="width:100%">
                 <div class="hero-text">
                     <b>Welcome to BookIt!</b>
                     <div class="spacer"></div>
