updated structure of faq page and banner images

--- a/newEquipmentpage/equipmentStart.html
+++ b/newEquipmentpage/equipmentStart.html
@@ -23,12 +23,12 @@
         width: 75%;
         height:fit-content;
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         flex-wrap: wrap;
-        text-align: center;
+        text-align: left;
         align-content: center;
         justify-content: center;
-        padding-top: 100px;
+        padding-top: 27px;
 
     }
 
@@ -266,7 +266,22 @@
     </div>
 
     <div id="cats" class="info">
-        Please select a category to get started.
+        <h3>Please select a category to get started.</h3>
+        <div style="text-align: left;">
+            <b>Equipment: </b> <u>Items</u> that members of the CMC are allowed to make bookings for both in space use and
+             take home use, such as:
+            <li>Cameras</li>
+            <li>Cables</li>
+            <li>Game controllers</li>
+        </div>
+        <br>
+        <div style="text-align: left;">
+            <b>In-Lab Resources: </b> <u>Spaces</u> that members of the CMC are allowed to make bookings for. All items within 
+            these spaces must stay at the CMC. Examples are:
+            <li>Poster printers</li>
+            <li>Audio Studio</li>
+            <li>Gaming Lab</li>
+        </div>
     </div>
 
 </div>
