--- a/newHomepage/banner.html
+++ b/newHomepage/banner.html
@@ -79,7 +79,7 @@
     }
     
     .bg img {
-        opacity: .93;
+        opacity: .9;
     }
 
     .hero-text {
@@ -274,7 +274,7 @@
             <div class="bg">
                 <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/quack.png" style="width:100%">
                 <div class="hero-text">
-                    <b>Welcome to BookIt!</b>
+                    <b>Welcome to the CMC!</b>
                     <div class="spacer"></div>
                     <!-- ********** Main Buttons ********** -->
                     <div class="main-cont">
@@ -305,7 +305,7 @@
             <div class="bg">
                 <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/quack.png" style="width:100%">
                 <div class="hero-text">
-                    <b>Welcome to BookIt!</b>
+                    <b>Welcome to the CMC!</b>
                     <div class="spacer"></div>
                     <!-- ********** Main Buttons ********** -->
                     <div class="main-cont">
@@ -336,7 +336,7 @@
             <div class="bg">
                 <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/blueQuack.png" style="width:100%">
                 <div class="hero-text">
-                    <b>Welcome to BookIt!</b>
+                    <b>Welcome to the CMC!</b>
                     <div class="spacer"></div>
                     <!-- ********** Main Buttons ********** -->
                     <div class="main-cont">
