--- a/newHomepage/newFirstTime.html
+++ b/newHomepage/newFirstTime.html
@@ -24,7 +24,7 @@
     }
 
     .infoBars p {
-        font-size: 14px;
+        font-size: 16px;
         color: rgb(90, 90, 90);
         line-height: 1.5;
         margin-top: 5px;
@@ -146,7 +146,7 @@
 </style>
 </head>
 
-<div class="main-cont">
+<div class="main-cont" style="font-size: 16px;">
     <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/quackCircle.png">
     <h1 font-size="36px">
         Welcome to the CMC!
