--- a/newHomepage/banner.html
+++ b/newHomepage/banner.html
@@ -51,9 +51,12 @@
     a:hover .two-main-butts {
         background-color: white !important;
         color: #000 !important;
-        text-decoration-line: none;
+        text-decoration-line: underline white !important;
         text-decoration: none;
-        text-decoration-color: #000;
+    }
+
+    a .two-main-butts {
+        text-decoration-line: underline white;
     }
 
     .two-main-butts img {
