--- a/newHomepage/contactUs.html
+++ b/newHomepage/contactUs.html
@@ -14,10 +14,25 @@
         font-size: 28px;
     }
 
+    /* changes color of homepage calendar */
+    .s-lc-mc-day-num {
+        background: #312f2a;
+    }
+    .s-lc-mc-today {
+        background: rgb(255, 233, 146);
+    }
+
+    .s-lc-mc-h {
+        background: rgb(0, 0, 0);
+    }
+
+    .s-lc-mc-other-month {
+        background: rgb(236, 236, 236);
+    }
+
     .s-lc-content {
         font-family: "Figtree", sans-serif;
     }
-
 
     /* removes timezone button visibility */
     .s-lc-timezone {
