--- a/newEquipmentpage/equipmentStart.html
+++ b/newEquipmentpage/equipmentStart.html
@@ -175,6 +175,22 @@
         margin-right: 0;
         display: none;
     }
+
+    .boxQ {
+        flex-direction: row;
+        width: 100%;
+        height: 25%;
+    }
+
+    .boxQ img {
+        width: 250px;
+        height: 150px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        padding-right: 15px;
+        border-radius: 10px;
+    }
+
     @media (max-width: 768px) {
         .openbtn {
             display: block;
@@ -266,10 +282,15 @@
     </div>
 
     <div id="cats" class="info">
-        <h3>Please select a category to get started.</h3>
+        <h1>Please select a category to get started.</h1>
         <div style="text-align: left;">
             <b>Equipment: </b> <u>Items</u> that members of the CMC are allowed to make bookings for both in space use and
              take home use, such as:
+            <div class="boxQ">
+                <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/camera.JPG">
+                <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/cables.JPG">
+                <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/controllers2.JPG">
+            </div>
             <li>Cameras</li>
             <li>Cables</li>
             <li>Game controllers</li>
