--- a/newHomepage/newFirstTime.html
+++ b/newHomepage/newFirstTime.html
@@ -7,13 +7,13 @@
     .main-cont {
         display: flex;
         flex-direction: column;
-        align-items: center;
+        /* align-items: center; */
         font-family: "Figtree", sans-serif;
     }
 
-    .img {
-        width: 50px;
-        height: 50px;
+    .main-cont img {
+        width: 100%;
+        height: fit-content;
     }
 
     .infoBars {
@@ -146,9 +146,9 @@
 </style>
 </head>
 
-<div class="main-cont" style="font-size: 16px;">
-    <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/quackCircle.png">
-    <h1 font-size="36px">
+<div class="main-cont" style="text-align: left;">
+    <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/staffPhoto.png">
+    <h1 style="text-align: left; font-size: 36px;">
         Welcome to the CMC!
     </h1>
 
