--- a/newHomepage/newFAQ.html
+++ b/newHomepage/newFAQ.html
@@ -386,8 +386,7 @@
                     document printing is available at our in-lab Pharos Kiosk,
                     and laser prints B&W or Color on letter, legal, and magazine sized
                     paper. Please note that we have a limit of <b>25 copies</b> per document print;
-                     please do not send multiple students from the same organization to print
-                      the same document.
+                     <u>please do not send multiple students to print the same document.</u>
                     </p>
                 </div>
                 <!-- Step 8 -->
@@ -397,7 +396,7 @@
                         <h2>How do I 3D-print at the CMC?</h2>
                     </div>
                     <p>
-                        The CMC offers self-service 3D printing on Prusa i3 MK3S
+                        The CMC offers self-service 3D printing on Bambu
                         printers with a selection of filaments available for purchase
                         (charged by the hour). You must first be authorized on the 3D printers in
                         order to reserve them. Set up an appointment at the front desk or
