--- a/newHomepage/oldfaqFormat.html
+++ b/newHomepage/oldfaqFormat.html
@@ -264,7 +264,7 @@
                     </div>
                 </a>
                 <div class="FAQ_answer">
-                    The Digital Media Center (CMC) is a multimedia lab space and
+                    The Creative Media Center (CMC) is a multimedia lab space and
                     an equipment, printing, and knowledge resource for students
                     interested in exploring creative uses of emerging media and technology
                     to communicate their ideas.<br><br>More information about the
