--- a/newHomepage/newFirstTime.html
+++ b/newHomepage/newFirstTime.html
@@ -185,9 +185,9 @@
                         <div class="step-number">2</div>
                         <h2>Come to the CMC</h2>
                     </div>
-                    <p>Come in person during our open hours. We are at 3003 N
-                        Charles St, right between FedEx
-                        and Homewood Apartments, underneath The LaB.</p>
+                    <p>Come in person during our open hours. We are at 3290 N Charles St., 
+                        in the Hopkins Student Student, room 401.
+                    </p>
                 </div>
                 
                 <!-- Step 3 -->
