fixed link underlines

--- a/newHomepage/bannerVersion2.html
+++ b/newHomepage/bannerVersion2.html
@@ -51,12 +51,7 @@
     a:hover .two-main-butts {
         background-color: white !important;
         color: #000 !important;
-        text-decoration-line: underline white !important;
-        text-decoration: none;
-    }
-
-    a .two-main-butts {
-        text-decoration-line: underline white;
+        text-decoration: none !important;
     }
 
     .two-main-butts img {
@@ -98,6 +93,10 @@
         transform: translate(-50%, -50%);
         color: white;
         z-index: 1;
+    }
+
+    .hero-text a {
+        text-decoration: none;
     }
 
     .slideshow-container {
