--- a/newHomepage/newFirstTime.html
+++ b/newHomepage/newFirstTime.html
@@ -186,7 +186,7 @@
                         <h2>Come to the CMC</h2>
                     </div>
                     <p>Come in person during our open hours. We are at 3290 N Charles St., 
-                        in the Hopkins Student Student, room 401.
+                        in the Hopkins Student Center, room 401.
                     </p>
                 </div>
                 
