--- a/newEquipmentpage/makerPage.html
+++ b/newEquipmentpage/makerPage.html
@@ -18,6 +18,10 @@
         margin-right: 20px;
     }
 
+    .sidebar a {
+        text-decoration: none;
+    }
+
     .info {
         background-color: rgb(255, 255, 255);
         width: 75%;
