--- a/newInLabPage/inLabstartPage.html
+++ b/newInLabPage/inLabstartPage.html
@@ -19,6 +19,10 @@
         margin-right: 20px;
     }
 
+    .sidebar a {
+        text-decoration: none;
+    }
+
     .info {
         background-color: rgb(255, 255, 255);
         width: 75%;
