--- a/newEquipmentpage/masonCSEdit.html
+++ b/newEquipmentpage/masonCSEdit.html
@@ -1023,7 +1023,7 @@
         var jhuLogo = document.createElement("img");
         jhuLogo.classList.add("jhulogo");
         // Set the logo source
-        jhuLogo.src = "https://libapps.s3.amazonaws.com/customers/9396/images/jhu_logo.png";
+        jhuLogo.src = "https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/jhu-sa-cmc-horizontal-blue-logo.png";
         // Add the logo to the JHU logo div
         jhuLogoDiv.appendChild(jhuLogo);
         // Add the JHU logo div to the footer
