--- a/newHomepage/newFAQ.html
+++ b/newHomepage/newFAQ.html
@@ -239,8 +239,10 @@
         <div class="infoBars-content">
             <h1 id="title-long" >Frequently Asked Questions</h1>
             <h1 id="title-short">FAQ</h1>
-            <img id="topquack" src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/3DFAQquack.png">
-            <img id="quack" src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/Quack_Wave_ALPHA.png">
+            <img id="topquack" src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/faqQuack3D__2_.png">
+            
+            <!-- quack that shows up on mobile version -->
+            <img id="quack" src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/3DfaqQuackLone.png">
             <div class="boxQ">
                 <div class="box">
                     <h1>
