updated audio and fiber studio links

--- a/newHomepage/newFAQ.html
+++ b/newHomepage/newFAQ.html
@@ -286,11 +286,7 @@
                         <h2>Who can use the CMC?</h2>
                     </div>
                     <p> Individuals must become members of the CMC in order to use the resources available.
-                        The CMC is for <b>student use only</b>.
-                        Only undgraduate, graduate, and PHD students enrolled at JHU 
-                        in KSAS or WSE full-time are allowed to use CMC resources as members <b>for free</b>.
-                        Undergraduates studying at the Peabody Conservatory also
-                        have access <b>for free</b>.
+                        The CMC is for KSAS, WSE, and Peabody <b>student use only</b>.
                         <br><br>
                         If you are a Master student in the AAP (Advance Academic Programs), or
                         a student in the Bloomberg School of Public Health, School of Medicine, 
