--- a/newInLabPage/inLabstartPage.html
+++ b/newInLabPage/inLabstartPage.html
@@ -289,7 +289,7 @@
             </div>
         </div>
         <div class="itemBox">
-            <a href="https://25live.collegenet.com/pro/jhu#!/home/location/1516/availability/daily">
+            <a href="https://bookit.cmc.jhu.edu/reserve/AudioStudio">
                 <img src="https://libapps.s3.amazonaws.com/customers/9396/images/gridicon_AudioStudio.png" /> 
             </a>
             <br>
@@ -307,7 +307,7 @@
             </div>
         </div>
         <div class="itemBox">
-            <a href="https://25live.collegenet.com/pro/jhu#!/home/location/1515/availability/daily">
+            <a href="https://bookit.cmc.jhu.edu/reserve/ProjectSpace">
                 <img src="https://libapps.s3.amazonaws.com/customers/9396/images/gridicon_ProjectSpace.png" /> 
             </a>
             <br>
