updated audio page

--- a/newEquipmentpage/audiopage.html
+++ b/newEquipmentpage/audiopage.html
@@ -185,10 +185,6 @@
         text-decoration-color:#000;
     }
 
-    .help {
-
-    }
-
     .help div:hover {
         border: 1px solid #dddddd;
         border-left: #ffffff;
@@ -354,6 +350,14 @@
             </a>
             <div class="padding">
                 Cables &amp; Adapters
+            </div>
+        </div>
+        <div class="itemBox">
+            <a href="https://bookit.cmc.jhu.edu/reserve/Instruments">
+                <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/guitars.jpg" /> 
+            </a>
+            <div class="padding">
+                Instruments
             </div>
         </div>
         <div class="itemBox">
