--- a/newEquipmentpage/compPage.html
+++ b/newEquipmentpage/compPage.html
@@ -318,6 +318,14 @@
             Computer Equipment
         </div>
         <div class="itemBox">
+            <a href="https://bookit.cmc.jhu.edu/reserve/AVP">
+                <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/quackAPV.JPG" /> 
+            </a>
+            <div class="padding">
+                Apple Vision Pro
+            </div>
+        </div>
+        <div class="itemBox">
             <a href="https://bookit.cmc.jhu.edu/reserve/ComputerCables">
                 <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/cablesComputing.JPG" /> 
             </a>
